--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section class="education" id="education">
         <h2>Education</h2>
         <ul>
-            <li><strong>BE (Computer Science Engineering)</strong> - Vivekanand College Of Engineering And Technology, 85%, Expected 2026</li>
-            <li><strong>PUC</strong> - Narendra PU College Tenkila, Puttur, 87%, 2022</li>
-            <li><strong>SSLC</strong> - Vivekanand High School Tenkila, Puttur, 89%, 2020</li>
+            <li><strong>BE (Computer Science Engineering)</strong> - Vivekanand College Of Engineering And Technology,  Expected 2026</li>
+            <li><strong>PUC</strong> - Narendra PU College Tenkila, Puttur,  Passing Year:2022</li>
+            <li><strong>SSLC</strong> - Vivekanand High School Tenkila, Puttur, Passing Year:2020</li>
         </ul>
     </section>
 
