--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Pavan N S Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+    <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <!-- Header Section -->
     <header class="header">
         <h1>Welcome to Pavan N S's Portfolio</h1>
