--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         <p><strong>Technical Skills:</strong> C Language, Java</p>
         <p><strong>Soft Skills:</strong> Self Confidence, Team Work</p>
     </section>
+        <section class="projects" id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <strong>Phishing URL Checker</strong> - A machine learning project built using Django to detect phishing URLs. Integrated a model to analyze URLs and predict potential phishing attempts.
+                <p>In progress, using a model file named 'phishing_url_model.pkl' in Django with a template 'index.html' for predictions.</p>
+            </li>
+        </ul>
+        </section>
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
